--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Gestão FlaCampinas</title>
 </head>
 <body>
-    
+    <nav>
+        <ul class = first_nav>
+
+            <li> <h2> FlaCampinas </h2></li>
+
+        </ul>
+         <ul class = second_nav>
+
+            <li><a href="#">Entrar</a></li>
+            
+            <li> <a href="#">Cadastrar</a></li>
+
+         </ul>
+    </nav>
+
+    <main>
+        <div id = box_login></div>
+
+            <img src="" alt= "foto_grupo_flacampinas">
+
+            <label for=""> Usuário: <input type="text" placeholder="Usuário"></label>
+
+            <label for=""> Senha: <input type="password" name="password" id="" placeholder="Senha"></label>
+
+        </div>
+
+        <div id = cadastro>
+
+            <p>Cade sua conta irmão?<a href="#"> Clica aqui e cria! </a></p>
+
+        </div>
+
+
+    </main>
+
+
+<script src="scripts.js"></script>
 </body>
 </html>
