--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <title>Gestão FlaCampinas</title>
 </head>
 <body>
-    <nav>
-        <ul class = first_nav>
+    <header>
+        <nav>
+            <ul class = first_nav>
 
-            <li> <h2> FlaCampinas </h2></li>
+                <li> <h2> FlaCampinas </h2></li>
 
-        </ul>
-         <ul class = second_nav>
+            </ul>
+            <ul class = second_nav>
 
-            <li><a href="#">Entrar</a></li>
-            
-            <li> <a href="#">Cadastrar</a></li>
+                <li><a href="#">Entrar</a></li>
+                
+                <li> <a href="#">Cadastrar</a></li>
 
-         </ul>
-    </nav>
+            </ul>
+        </nav>
+    </header>
+
 
     <main>
         <div id = box_login></div>
@@ -35,7 +38,7 @@
 
         <div id = cadastro>
 
-            <p>Cade sua conta irmão?<a href="#"> Clica aqui e cria! </a></p>
+            <p>Cade sua conta irmão?<a href="#"> Clica ai e cria! </a></p>
 
         </div>
 
